* move index for github pages

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 </head>
 <body>
     <span>
-        <a href="./loading/index.html">Loading</a>
+        <a href="./src/loading/index.html">Loading</a>
     </span>
     <span>
-        <a href="./rotate/index.html">Rotate</a>
+        <a href="./src/rotate/index.html">Rotate</a>
     </span>
     <span>
-        <a href="./img-flip/index.html">Img-Flip</a>
+        <a href="./src/img-flip/index.html">Img-Flip</a>
     </span>
     <script>
         const posArr = [];
