--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
     <span>
         <a href="./src/img-flip/index.html">Img-Flip</a>
     </span>
+    <span>
+        <a href="./src/background-block/index.html">Background-Block</a>
+    </span>
     <script>
         const posArr = [];
         const maxWidth = 100 + 20;
