--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,25 @@
             background-color: rgb(32, 58, 58);
             overflow: hidden;
         }
-        a {
-            text-decoration: none;
-            color: darkturquoise;
-        }
         .flex-container {
+            position: fixed;
+            top: 0;
             display: flex;
             width: 100vw;
             height: 100vh;
             justify-content: center;
             align-items: center;
+            transition: all 0.5s linear;
+        }
+        .flex-container.flex-container-show {
+            left: 0;
+        }
+        .flex-container.flex-container-hidden {
+            left: -100vw;
+        }
+        .block-wrapper {
+            color: darkturquoise;
+            cursor: pointer;
         }
         .block-wrapper .block {
             position: relative;
@@ -37,26 +46,67 @@
         .block-wrapper .block:hover {
             animation-play-state: paused;
         }
+
+        .frame {
+            position: fixed;
+            width: 100vw;
+            height: 100vh;
+            top: 0;
+            transition: all 0.5s linear;
+        }
+        .frame.frame-hidden {
+            left: 100vw;
+        }
+        .frame.frame-show {
+            left: 0;
+        }
+
+        body .back {
+            position: fixed;
+            top: 0;
+            background-color: #ccc;
+            padding: 10px 20px;
+            cursor: pointer;
+            transition: all 0.5s linear,
+                        background-color 0.4s linear,
+                        color 0.4s linear;
+        }
+        body .back:hover {
+            background-color: rgb(32, 58, 58);
+            color: darkturquoise;
+        }
+        body .back.back-show {
+            left: 0;
+        }
+        body .back.back-hidden {
+            left: 100vw;
+        }
     </style>
 </head>
 <body>
-    <div class="flex-container">
+    <div class="flex-container flex-container-show">
         <div class="block-wrapper">
-            <div class="block" style="--scale: 1">
-                <a href="./loading/index.html">Loading</a>
+            <div class="block" style="--scale: 1" onclick="handleClick(this)" src="./loading">
+                Loading
             </div>
-            <div class="block" style="--scale: 1">
-                <a href="./rotate/index.html">Rotate</a>
+            <div class="block" style="--scale: 1" onclick="handleClick(this)" src="./rotate">
+                Rotate
             </div>
-            <div class="block" style="--scale: 1">
-                <a href="./img-flip/index.html">Img-Flip</a>
+            <div class="block" style="--scale: 1" onclick="handleClick(this)" src="./img-flip">
+                Img-Flip
             </div>
-            <div class="block" style="--scale: 1">
-                <a href="./background-block/index.html">Background-Block</a>
+            <div class="block" style="--scale: 1" onclick="handleClick(this)" src="./background-block">
+                Background-Block
             </div>
         </div>
     </div>
+    <iframe src="./loading/index.html" frameborder="0" class="frame frame-hidden"></iframe>
+    <div class="back back-hidden" onclick="handleBack()">< BACK</div>
     <script>
+        const frame = document.querySelector('.frame');
+        const index = document.querySelector('.flex-container');
+        const back = document.querySelector('.back');
+
         function resetScale() {
             document.querySelectorAll('.block').forEach(block => {
                 block.style.setProperty('--scale', 1);
@@ -81,6 +131,20 @@
             })
         });
         document.querySelector('.block-wrapper').addEventListener('mouseleave', e => resetScale());
+
+        function handleClick(e) {
+            const src = e.getAttribute('src')
+            frame.src = src;
+            frame.className = 'frame frame-show';
+            back.className = 'back back-show';
+            index.className = 'flex-container flex-container-hidden';
+        }
+
+        function handleBack() {
+            frame.className = 'frame frame-hidden';
+            back.className = 'back back-hidden';
+            index.className = 'flex-container flex-container-show';
+        }
     </script>
 </body>
 </html>
